deploy/k8s/overlays/prod/live-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 67speedtest-live
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: 67speedtest-live-tls
      hosts:
        - 67speedtest.lol
  rules:
    - host: 67speedtest.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-67speedtest
                port:
                  number: 80
