deploy/k8s/overlays/prod/www-redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 67speedtest-www-redirect
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: https://67speedtest.lol
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: 67speedtest-www-tls
      hosts:
        - www.67speedtest.lol
  rules:
    - host: www.67speedtest.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-67speedtest
                port:
                  number: 80
